--- a/static/scss/general-styles.scss
+++ b/static/scss/general-styles.scss
@@ -46,6 +46,7 @@ p {
 
 a {
   color: $link-text;
+  font-weight: inherit;
 }
 
 a:focus, a:hover {
